--- a/people.html
+++ b/people.html
@@ -254,10 +254,12 @@
     </div>
   </main>
 
-  <footer>
+ <footer>
+  <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank">
     <img alt="EU Signature Logo" width="450" src="signaturelogo.png">
-    <small>&copy; 2023-2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
-  </footer>
+  </a>
+  <small>&copy; 2023–2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
+</footer>
 <script>
   document.addEventListener("DOMContentLoaded", function () {
     const heading = document.querySelector('.team-heading');
