--- a/outreach.html
+++ b/outreach.html
@@ -104,14 +104,16 @@
 </head>
 
 <body>
-  <header>
-    <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
-    <div class="logo-wrapper">
-      <figure>
+ <header>
+  <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
+  <div class="logo-wrapper">
+    <figure>
+      <a href="https://nexteugeneration.com" target="_blank">
         <img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png">
-      </figure>
-    </div>
-  </header>
+      </a>
+    </figure>
+  </div>
+</header>
 
   <nav>
     <ul>
@@ -134,9 +136,11 @@
   </main>
 
   <footer>
+  <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank">
     <img alt="EU Signature Logo" width="450" src="signaturelogo.png">
-    <small>&copy; 2023-2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
-  </footer>
+  </a>
+  <small>&copy; 2023–2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
+</footer>
 </body>
 
 </html>
