--- a/projectprogress.html
+++ b/projectprogress.html
@@ -151,7 +151,7 @@
 
     <h2 class="section-heading">Internal Workshop – PRIN 2022 COCOA</h2>
 
-    <p style="text-align: center; font-style: italic;">9–12 December 2024, Genoa, Italy</p>
+    <p style="text-align: center; font-style: italic;">9–12 December 2024, Rome, Italy</p>
 
     <p>The internal COCOA project workshop focused on preparing and executing the first robot–human commensality experiment. Core team members from Sapienza University and the University of Genoa gathered to define the experiment, integrate and test the platform, and begin data collection. The event included cross-project collaboration with PRIN 2022 VITA and featured participant-driven sessions involving real-time interaction with a social robot over shared meals.</p>
 
