--- a/index.html
+++ b/index.html
@@ -1,190 +1,137 @@
-<!-- MVP.css quickstart template: https://github.com/andybrewer/mvp/ -->
-
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <link rel="icon" href="https://via.placeholder.com/70x70">
-    <link rel="stylesheet" href="./mvp.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="COCOA Homepage">
+  <title>COCOA</title>
+
+  <link rel="stylesheet" href="./mvp.css">
+  <link rel="icon" href="https://via.placeholder.com/70x70">
+
   <style>
     body {
-      background-color: #ffffff; /* white, or change it */
+      background-color: #f5f7fa;
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    header {
+      text-align: center;
+      padding: 1rem 0;
+    }
+
+    header img.logo-main {
+      height: 250px;
+    }
+
+    .logo-wrapper figure img {
+      width: 250px;
+      margin-top: 1rem;
+    }
+
+    nav {
+      margin-top: 1.5rem;
+    }
+
+    nav ul {
+      list-style: none;
+      padding: 0;
+      display: flex;
+      justify-content: space-around;
+      flex-wrap: wrap;
+      margin: 20px 0;
+    }
+
+    nav ul li a {
+      text-decoration: none;
+      font-weight: bold;
+      color: black;
+      padding: 0.25em 0.75em;
+      border-radius: 8px;
+    }
+
+    nav ul li a:hover {
+      text-shadow: 1px 1px 0 #ffd700, -1px 1px 0 #ffd700, 1px -1px 0 #ffd700, -1px -1px 0 #ffd700;
+    }
+
+    main {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 2rem;
+    }
+
+    h1, h2 {
+      text-align: center;
+      color: #2a72c4;
+    }
+
+    footer {
+      text-align: center;
+      padding: 2rem 1rem;
+      background-color: #0055a4;
+    }
+
+    footer img {
+      max-width: 100%;
+      height: auto;
+    }
+
+    footer small {
+      display: block;
+      margin-top: 1rem;
+      color: #ffffff;
     }
   </style>
-
-    <meta charset="utf-8">
-    <meta name="description" content="My description">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <title>COCOA</title>
 </head>
+
 <body>
-    <header>
-        <nav>
-            <a href="/"><img alt="Logo" src="cocoa-logo_color.png" height="250"></a>
-        </nav>
-    </header>
+  <header>
+    <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
+    <div class="logo-wrapper">
+      <figure>
+        <a href="https://nexteugeneration.com" target="_blank">
+          <img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png">
+        </a>
+      </figure>
+    </div>
+  </header>
 
-    <h1 style="text-align: center;">COmputational Models of COmmensality for artificial Agents (COCOA)</h1>
-    
-    <figure style="text-align: center;">
-        <img alt="nextgenlogo" width="250" src="EN_Funded_by_the_European_Union_RGB_POS.png">
-    </figure>
-
-    <ul style="display: flex; justify-content: space-around; list-style-type: none; padding: 0; margin-top: 20px;">
-        <li><a href="/">Home</a></li>
-        <li><a href="people.html">Team</a></li>
-        <li><a href="projectprogress.html">Project Progress</a></li>
-        <li><a href="results.html">Publications</a></li>
-        <li><a href="outreach.html">Research Dissemination</a></li>
-        
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="people.html">Team</a></li>
+      <li><a href="projectprogress.html">Project Progress</a></li>
+      <li><a href="results.html">Publications</a></li>
+      <li><a href="outreach.html">Research Dissemination</a></li>
     </ul>
-</body>
+  </nav>
 
+  <main>
+    <h1>COmputational Models of COmmensality for artificial Agents (COCOA)</h1>
 
+    <section>
+      <h2>Our Mission</h2>
+      <p>Eating together in a group of people, or “commensality”, is one of the most profound social experiences humans engage in. It involves gathering around the table, talking, and sharing food. Also, it is one of the most common, widespread, and universal human experiences in the whole history of humanity (think about our ancestors, gathering in front of the campfire and sharing hunted food). Several positive impacts of commensality include food intake and choices, positive emotions, and wellbeing. Despite its importance, the frequency of shared meals is decreasing, especially in industrialized countries, due to the increasing trend to live alone. Not only can the lack of social eating, or commensality, have negative consequences on mental and physical health (depression, weight problems), but several benefits are missing for people who have to eat alone.</p>
+      <p>COCOA aims to fill this gap by paving the ground toward creating interactive technologies supporting the commensality experience. The project will use state-of-the art AI methods and the multimodal data of nonverbal behaviors to develop new commensal activities recognition models and innovative techniques for social relations analysis and quantification in the commensality setting.</p>
+    </section>
 
-  
-        </nav>
-        <!--h1>Page Heading with <i>Italics</i> and <u>Underline</u></h1>
-        <p>Page Subheading with <mark>highlighting</mark></p>
-        <br>
-        <p><a href="#"><i>Italic Link Button</i></a><a href="#"><b>Bold Link Button &rarr;</b></a></p-->
-    </header>
-    <main>
-        <!--hr>
-        <section id="section-1">
-            <header>
-                <h2>Section Heading</h2>
-                <p>Section Subheading</p>
-            </header>
-            <aside>
-                <h3>Card heading</h3>
-                <p>Card content*</p>
-                <p><small>*with small content</small></p>
-            </aside>
-            <aside>
-                <h3>Card heading</h3>
-                <p>Card content <sup>with notification</sup></p>
-            </aside>
-            <aside>
-                <h3>Card heading</h3>
-                <p>Card content</p>
-            </aside>
-        </section>
-        <hr>
-        <section>
-            <blockquote>
-                "Quote"
-                <footer><i>- Attribution</i></footer>
-            </blockquote>
-        </section>
-        <hr>
-        <section>
-            <table>
-                <thead>
-                    <tr>
-                        <th></th>
-                        <th>Col A</th>
-                        <th>Col B</th>
-                        <th>Col C</th>
-                    </tr>
-                </thead>
-                <tr>
-                    <td>Row 1</td>
-                    <td>Cell A1</td>
-                    <td>Cell B1</td>
-                    <td>Cell C1</td>
-                </tr>
-                <tr>
-                    <td>Row 2</td>
-                    <td>Cell A2</td>
-                    <td>Cell B2</td>
-                    <td>Cell C2</td>
-                </tr>
-            </table>
-        </section>
-        <hr-->
+    <section>
+      <h2>Our Timeline</h2>
+      <div style="text-align: center;">
+        <a href="projectprogress.html">
+          <img src="images/COCOAtimeline.png" alt="COCOA Timeline" style="max-width: 100%; height: auto; border-radius: 12px; box-shadow: 0 4px 10px rgba(0,0,0,0.1);">
+        </a>
+      </div>
+    </section>
+  </main>
 
-        <article>
-            <h2>Our Mission</h2>
-            <p>Eating together in a group of people, or “commensality”, is one of the most profound social experiences humans engage in. It
-                involves gathering around the table, talking, and sharing food. Also, it is one of the most common, widespread, and universal human
-                experiences in the whole history of humanity (think about our ancestors, gathering in front of the campfire and sharing hunted food).
-                Several positive impacts of commensality include food intake and choices, positive emotions, and wellbeing. Despite its importance,
-                the frequency of shared meals is decreasing, especially in industrialized countries, due to the increasing trend to live alone. Not only
-                can the lack of social eating, or commensality, have negative consequences on mental and physical health (depression, weight
-                problems), but several benefits are missing for people who have to eat alone.
-            </p>
-            <p>
-                COCOA aims to fill this gap by paving the ground toward creating interactive technologies supporting the commensality experience.
-                The project will use state-of-the art AI methods and the multimodal data of nonverbal behaviors to develop new commensal
-                activities recognition models and innovative techniques for social relations analysis and quantification in the commensality setting.
-            </p>
-            <!--aside>
-                <p>Article callout</p>
-            </aside>
-            <ul>
-                <li>List item 1</li>
-                <li>List item 2</li>
-            </ul>
-            <figure>
-                <img alt="Stock photo" src="https://via.placeholder.com/1080x500?text=Amazing+stock+photo">
-                <figcaption><i>Image caption</i></figcaption>
-            </figure-->
-
-            <h2>Our Timeline</h2>
-            <div style="text-align: center;">
-  <a href="projectprogress.html">
-    <img src="images/COCOAtimeline.png" alt="COCOA Timeline" style="max-width: 100%; height: auto;">
-  </a>
-</div>
-
-        </article>
-
-        <!--hr>
-        <div>
-            <details>
-                <summary>Expandable title</summary>
-                <p>Revealed content</p>
-            </details>
-            <details>
-                <summary>Another expandable title</summary>
-                <p>More revealed content</p>
-            </details>
-            <br>
-            <p>Inline <code>code</code> snippets</p>
-            <pre>
-                <code>
-// preformatted code block
-                </code>
-            </pre>
-        </div>
-        <hr>
-        <section>
-            <form>
-                <header>
-                    <h2>Form title</h2>
-                </header>
-                <label for="input1">Input label:</label>
-                <input type="text" id="input1" name="input1" size="20" placeholder="Input1">
-                <label for="select1">Select label:</label>
-                <select id="select1">
-                    <option value="option1">option1</option>
-                    <option value="option2">option2</option>
-                </select>
-                <label for="textarea1">Textarea label:</label>
-                <textarea cols="40" rows="5" id="textarea1"></textarea>
-                <button type="submit">Submit</button>
-            </form>
-        </section-->
-    </main>
-    <footer>
-        <hr>
-        <section>
-            <img alt="nextgenlogo" width="450" src="signaturelogo.png">
-            <small>&copy; 2023-2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
-        </section>
-    </footer>
+  <footer>
+    <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank">
+      <img alt="EU Signature Logo" width="450" src="signaturelogo.png">
+    </a>
+    <small>&copy; 2023–2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
+  </footer>
 </body>
 
 </html>
