--- a/index.html
+++ b/index.html
@@ -87,15 +87,15 @@
 
 <body>
   <header>
-    <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
-    <div class="logo-wrapper">
-      <figure>
-        <a href="https://nexteugeneration.com" target="_blank">
-          <img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png">
-        </a>
-      </figure>
-    </div>
-  </header>
+  <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
+  <div class="logo-wrapper">
+    <figure>
+      <a href="https://nexteugeneration.com" target="_blank">
+        <img alt="EU Logo" src="EN_Funded_by_the_European_Union_RGB_POS.png">
+      </a>
+    </figure>
+  </div>
+</header>
 
   <nav>
     <ul>
@@ -108,6 +108,9 @@
   </nav>
 
   <main>
+    <div style="text-align: center; margin-bottom: 2rem;">
+      <img src="images/winecountryrobots.jpg" alt="COCOA Wine Country Robots" style="width: 100%; max-width: 900px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.15);">
+    </div>
     <h1>COmputational Models of COmmensality for artificial Agents (COCOA)</h1>
 
     <section>
@@ -127,11 +130,11 @@
   </main>
 
   <footer>
-    <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank">
-      <img alt="EU Signature Logo" width="450" src="signaturelogo.png">
-    </a>
-    <small>&copy; 2023–2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
-  </footer>
+  <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank">
+    <img alt="EU Signature Logo" width="450" src="signaturelogo.png">
+  </a>
+  <small>&copy; 2023–2025 MUR PRIN COCOA Project; Finanziato dall’Unione europea – Next Generation EU; Funded by the European Union – Next Generation EU</small>
+</footer>
 </body>
 
 </html>
