--- a/outreach.html
+++ b/outreach.html
@@ -129,6 +129,13 @@
     <h2 class="section-heading">Outreach & Community</h2>
 
     <div class="event-highlight">
+      <h3><a href="https://icsr2025.eu" target="_blank" style="color: #2a72c4; text-decoration: none;">International Conference on Social Robotics + AI (ICSR) 2025</a></h3>
+      <p>This event brought together leading experts, researchers, and professionals from around the world to discuss the latest advancements in “Social Robotics and Artificial Intelligence”. The conference theme, "Emotivation at the Core: Empowering Social Robots to Inspire and Connect," highlighted the essential role of “Emotivation” in social robotics. Emotivation captures the synergy between emotion and motivation, where emotions trigger and sustain motivation during interactions. In social robotics, this concept is key to building trust, fostering empathy, and supporting decision-making by enabling robots to respond sensitively to human emotions, inspiring engagement and action.</p>
+      <img src="images/ICSR2025.pdf" alt="ICSR Presentation">
+    </div>
+  </main>
+
+   <div class="event-highlight">
       <h3><a href="https://cofi2024.github.io" target="_blank" style="color: #2a72c4; text-decoration: none;">CoFI2024 Workshop</a></h3>
       <p>Held in conjunction with the <strong><a href="https://icmi.acm.org/2024/" target="_blank" style="color: #2a72c4; text-decoration: none;">ICMI 2024 ACM Conference</a></strong>, this workshop explores how interactive technology can enrich dining experiences and foster an interdisciplinary community around commensality and human-food interaction. A special focus is on multimodal interaction among commensal partners — human or artificial.</p>
       <img src="images/ICMIGroup.jpeg" alt="ICMI Group Photo">
