--- a/results.html
+++ b/results.html
@@ -142,15 +142,14 @@
       <h3>Designing Interactions for Artificial Commensal Companions</h3>
       <p><strong>Authors:</strong> Hunter Fong, Selim Soufargi, Maurizio Mancini, Radoslaw Niewiadomski</p>
       <p><strong>Conference:</strong> 2025 ACM Designing Interactive Systems Conference (DIS25), July 5-9, 2025, Madeira, Portugal</p>
-      <p><a href="https://doi.org/10.1145/3715668.3736351" target="_blank">Read the paper</a> | <a href="??" target="_blank">View Poster (PDF)</a> | <a href="??" target="_blank">Watch Video</a></p>
+      <p><a href="https://doi.org/10.1145/3715668.3736351" target="_blank">Read the paper</a> | <a href="images/DIS25_Fong.pdf" target="_blank">View Poster (PDF)</a> | <a href="??" target="_blank">Watch Video</a></p>
     </div>
     
     <div class="pub">
       <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
       <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
       <p><strong>Conference:</strong> 2025 ACM Designing Interactive Systems Conference (DIS25), July 5-9, 2025, Madeira, Portugal</p>
-      <p><a href="https://doi.org/10.1145/3715668.3736334" target="_blank">Read the paper</a> | <a href="???" target="_blank">View Poster (PDF)</a></p> 
-      <img src="???" alt="Presentation image from DIS" style="max-width: 300px;">
+      <p><a href="https://doi.org/10.1145/3715668.3736334" target="_blank">Read the paper</a> | <a href="images/DIS25_Niewiadomski.pdf" target="_blank">View Poster (PDF)</a></p> 
     </div>
     
     <div class="pub">
