--- a/results.html
+++ b/results.html
@@ -149,7 +149,7 @@
   <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
   <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
   <p><strong>Conference:</strong> 
-    <a href="https://dis.acm.org/2025/" target="_blank" style="color: #2a72c4; text-decoration: none;">
+    <a href="https://dis.acm.org/2025/" target="_blank" style="color: #555; text-decoration: underline dotted;">
       2025 ACM Designing Interactive Systems Conference (DIS25), July 5-9, 2025, Madeira, Portugal
     </a>
   </p>
