--- a/results.html
+++ b/results.html
@@ -149,10 +149,10 @@
   <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
   <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
   <p><strong>Conference:</strong> 
-    <a href="https://dis.acm.org/2025/" target="_blank" style="color: #555; text-decoration: underline dotted;">
-      2025 ACM Designing Interactive Systems Conference (DIS25), July 5-9, 2025, Madeira, Portugal
-    </a>
-  </p>
+  <a href="https://dis.acm.org/2025/" target="_blank" style="font-size: 0.9em; color: #0077b6; text-decoration: underline;">
+    2025 ACM Designing Interactive Systems Conference (DIS25), July 5–9, 2025, Madeira, Portugal
+  </a>
+</p>
   <p>
     <a href="https://doi.org/10.1145/3715668.3736334" target="_blank">Read the paper</a> |
     <a href="images/DIS25_Niewiadomski.pdf" target="_blank">View Poster (PDF)</a>
