--- a/results.html
+++ b/results.html
@@ -149,7 +149,7 @@
   <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
   <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
   <p><strong>Conference:</strong> 
-  <a href="https://dis.acm.org/2025/" target="_blank" style="font-size: 0.9em; color: #0077b6; text-decoration: underline;">
+  <a href="https://dis.acm.org/2025/" target="_blank" style="font-size: 0.9em; color: #006a9d; text-decoration: underline;">
     2025 ACM Designing Interactive Systems Conference (DIS25), July 5–9, 2025, Madeira, Portugal
   </a>
 </p>
