--- a/results.html
+++ b/results.html
@@ -148,11 +148,24 @@
     <div class="pub">
   <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
   <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
-  <p><strong>Conference:</strong> 
-  <a href="https://dis.acm.org/2025/" target="_blank" style="font-size: 0.9em; color: #006a9d; text-decoration: underline;">
+ <p><strong>Conference:</strong> 
+  <a href="https://dis.acm.org/2025/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
     2025 ACM Designing Interactive Systems Conference (DIS25), July 5–9, 2025, Madeira, Portugal
   </a>
 </p>
+
+<style>
+  a {
+    color: #888; /* Soft grayish-blue */
+    text-decoration: none; /* No underline, more subtle */
+  }
+
+  a:hover {
+    color: #005a87; /* A subtle but noticeable hover color */
+    text-decoration: underline; /* Adds underline only on hover for emphasis */
+  }
+</style>
+
   <p>
     <a href="https://doi.org/10.1145/3715668.3736334" target="_blank">Read the paper</a> |
     <a href="images/DIS25_Niewiadomski.pdf" target="_blank">View Poster (PDF)</a>
