--- a/results.html
+++ b/results.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="COCOA Publications">
@@ -9,6 +10,7 @@
 
   <link rel="stylesheet" href="./mvp.css">
   <link rel="icon" href="https://via.placeholder.com/70x70">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
 
   <style>
     body {
@@ -135,153 +137,165 @@
     </ul>
   </nav>
 
-  <main>
-    <h2 class="section-heading">Publications</h2>
+  <head>
+  <!-- Include Font Awesome from CDN -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+</head>
 
-    <!-- Publication 10 -->
-    <div class="pub">
-      <h3>Designing Interactions for Artificial Commensal Companions</h3>
-      <p><strong>Authors:</strong> Hunter Fong, Selim Soufargi, Maurizio Mancini, Radoslaw Niewiadomski</p>
-       <p><strong>Conference:</strong> 
-  <a href="https://dis.acm.org/2025/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    2025 ACM Designing Interactive Systems Conference (DIS 2025), July 5–9, 2025, Madeira, Portugal
-  </a>
-</p>
+<main>
+  <h2 class="section-heading">Publications</h2>
 
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
-  }
-</style>
-
-  <p>
-      <p><a href="https://doi.org/10.1145/3715668.3736351" target="_blank">Read the paper</a> | <a href="images/DIS25_Fong.pdf" target="_blank">View Poster (PDF)</a> | <a href="??" target="_blank">Watch Video</a></p>
-    </div>
-
-
-    <!-- Publication 9 -->
-    <div class="pub">
-  <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
-  <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
- <p><strong>Conference:</strong> 
-  <a href="https://dis.acm.org/2025/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    2025 ACM Designing Interactive Systems Conference (DIS 2025), July 5–9, 2025, Madeira, Portugal
-  </a>
-</p>
-
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
-  }
-</style>
-
-  <p>
-    <a href="https://doi.org/10.1145/3715668.3736334" target="_blank">Read the paper</a> |
-    <a href="images/DIS25_Niewiadomski.pdf" target="_blank">View Poster (PDF)</a>
-  </p> 
-</div>
-    
-    <!-- Publication 8 -->
-    <div class="pub">
-      <h3>A Social Robot Companion for Individuals Eating Alone</h3>
-      <p><strong>Authors:</strong> Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski, Maurizio Mancini</p>
-      <p><strong>Conference:</strong> 
-  <a href="https://iui.acm.org/2025/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    30th Annual ACM Conference on Intelligent User Interfaces (IUI 2025), March 24-27, 2025, Cagliari, Italy
-  </a>
-</p>
-
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
-  }
-</style>
-
-  <p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3708557.3716340" target="_blank">Read the paper</a> | <a href="images/posterIUI.pdf" target="_blank">View Poster (PDF)</a> | <a href="https://www.youtube.com/watch?v=2-CovS9vWfU" target="_blank">Watch Video</a></p>
-    </div>
-
-    <!-- Publication 7 -->
-    <div class="pub">
-      <h3>Automatic Recognition of Commensal Activities in Co-located and Online settings</h3>
-      <p><strong>Authors:</strong> Yazgi, K., Beyan, C., Mancini, M., Niewiadomski, R.</p>
-      <p><strong>Conference:</strong> 
-  <a href="https://icmi.acm.org/2024/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
-  </a>
-</p>
-
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
-  }
-</style>
-
-  <p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686219" target="_blank">Read the paper</a> | <a href="images/COFI2024_Kheder.pdf" target="_blank">View Poster (PDF)</a></p>
-    </div>
-
-    <!-- Publication 6 -->
-    <div class="pub">
-      <h3>Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings</h3>
-      <p><strong>Authors:</strong> Hoxha, A., Fong, H., Niewiadomski, R.</p>
-     <p><strong>Conference:</strong> 
-  <a href="https://icmi.acm.org/2024/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
-  </a>
-</p>
-
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
-  }
-</style>
-
-  <p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686220" target="_blank">Read the paper</a> | <a href="images/COFI2024_Albana.pdf" target="_blank">View Poster (PDF)</a></p>
-    </div>
-    
-    <!-- Publication 5 -->
+  <!-- Publication 10 -->
   <div class="pub">
-      <h3>Sounding bodies: Exploring sonification to promote physical contact</h3>
-      <p><strong>Authors:</strong> Chiara Gulino, Radoslaw Niewiadomski</p>
+    <h3>Designing Interactions for Artificial Commensal Companions</h3>
+    <p><strong>Authors:</strong> Hunter Fong, Selim Soufargi, Maurizio Mancini, Radoslaw Niewiadomski</p>
     <p><strong>Conference:</strong> 
-  <a href="https://avi2024.dibris.unige.it/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    17th International Conference on Advanced Visual Interfaces (AVI 2024), June 3-7, 2024, Arenzano (Genoa), Italy
-  </a>
-</p>
+      <a href="https://dis.acm.org/2025/" target="_blank">
+        2025 ACM Designing Interactive Systems Conference (DIS 2025), July 5–9, 2025, Madeira, Portugal
+      </a>
+    </p>
+    <p>
+      <a href="https://doi.org/10.1145/3715668.3736351" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+      <a href="images/DIS25_Fong.pdf" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a> | 
+      <a href="??" target="_blank"><i class="fas fa-video"></i> Watch Video</a>
+    </p>
+  </div>
 
-<style>
+  <!-- Publication 9 -->
+  <div class="pub">
+    <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
+    <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://dis.acm.org/2025/" target="_blank">
+        2025 ACM Designing Interactive Systems Conference (DIS 2025), July 5–9, 2025, Madeira, Portugal
+      </a>
+    </p>
+    <p>
+      <a href="https://doi.org/10.1145/3715668.3736334" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+      <a href="images/DIS25_Niewiadomski.pdf" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a>
+    </p>
+  </div>
+
+  <!-- Publication 8 -->
+  <div class="pub">
+    <h3>A Social Robot Companion for Individuals Eating Alone</h3>
+    <p><strong>Authors:</strong> Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski, Maurizio Mancini</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://iui.acm.org/2025/" target="_blank">
+        30th Annual ACM Conference on Intelligent User Interfaces (IUI 2025), March 24-27, 2025, Cagliari, Italy
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3708557.3716340" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+      <a href="images/posterIUI.pdf" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a> | 
+      <a href="https://www.youtube.com/watch?v=2-CovS9vWfU" target="_blank"><i class="fas fa-video"></i> Watch Video</a>
+    </p>
+  </div>
+
+  <!-- Publication 7 -->
+  <div class="pub">
+    <h3>Automatic Recognition of Commensal Activities in Co-located and Online settings</h3>
+    <p><strong>Authors:</strong> Yazgi, K., Beyan, C., Mancini, M., Niewiadomski, R.</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://icmi.acm.org/2024/" target="_blank">
+        26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686219" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+      <a href="images/COFI2024_Kheder.pdf" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a>
+    </p>
+  </div>
+
+  <!-- Publication 6 -->
+  <div class="pub">
+    <h3>Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings</h3>
+    <p><strong>Authors:</strong> Hoxha, A., Fong, H., Niewiadomski, R.</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://icmi.acm.org/2024/" target="_blank">
+        26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686220" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+      <a href="images/COFI2024_Albana.pdf" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a>
+    </p>
+  </div>
+
+  <!-- Publication 5 -->
+  <div class="pub">
+    <h3>Sounding bodies: Exploring sonification to promote physical contact</h3>
+    <p><strong>Authors:</strong> Chiara Gulino, Radoslaw Niewiadomski</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://avi2024.dibris.unige.it/" target="_blank">
+        17th International Conference on Advanced Visual Interfaces (AVI 2024), June 3-7, 2024, Arenzano (Genoa), Italy
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656749" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a>
+    </p>
+  </div>
+
+  <!-- Publication 4 -->
+  <div class="pub">
+    <h3>Multimodal interactive VR mindfulness experience</h3>
+    <p><strong>Authors:</strong> Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni, Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://avi2024.dibris.unige.it/" target="_blank">
+        17th International Conference on Advanced Visual Interfaces (AVI 2024), June 3-7, 2024, Arenzano (Genoa), Italy
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a>
+    </p>
+  </div>
+
+  <!-- Publication 3 -->
+  <div class="pub">
+    <h3>First Multimodal Banquet: Exploring Innovative Technology for Commensality and Human-Food Interaction (CoFI2024)</h3>
+    <p><strong>Authors:</strong> Niewiadomski, R., Altarriba Bertran, F., Dawes, C., Obrist, M., Mancini, M.</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://icmi.acm.org/2024/" target="_blank">
+        26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3678957.3685762" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a>
+    </p>
+  </div>
+
+  <!-- Publication 2 -->
+  <div class="pub">
+    <h3>A Virtual Agent as a Commensal Companion</h3>
+    <p><strong>Authors:</strong> Mancini, M., Niewiadomski, R., De Lucia, G., Longobardi, F.M.</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://iva.acm.org/2024/" target="_blank">
+        24th ACM International Conference on Intelligent Virtual Agents (IVA 2024), September 16–19, 2024, Glasgow, United Kingdom
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3652988.3673963" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+      <a href="images/poster_AVI.Conference_2024.pdf" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a>
+    </p>
+  </div>
+
+  <!-- Publication 1 -->
+  <div class="pub">
+    <h3>How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity</h3>
+    <p><strong>Authors:</strong> Tiuleneva M., Castano E., Niewiadomski, R.</p>
+    <p><strong>Conference:</strong> ACII 2024, September 15–18, Glasgow, UK</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://acii-conf.net/2024/" target="_blank">
+        12th International Conference on Affective Computing & Intelligent Interaction (ACII 2024), September 15–18, 2024, Glasgow, United Kingdom
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656711" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a>
+    </p>
+  </div>
+</main>
+
+  <style>
   a {
     color: #888; /* Soft grayish-blue */
     text-decoration: none; /* No underline, more subtle */
@@ -291,117 +305,12 @@
     color: #4da6ff; /* A subtle but noticeable hover color */
     text-decoration: underline; /* Adds underline only on hover for emphasis */
   }
-</style>
 
-  <p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656749" target="_blank">Read the paper</a></p>
-    </div>
-
-    <!-- Publication 4 -->
-    <div class="pub">
-      <h3>Multimodal interactive VR mindfulness experience</h3>
-      <p><strong>Authors:</strong> Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni, Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi</p>
-       <p><strong>Conference:</strong> 
-  <a href="https://avi2024.dibris.unige.it/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    17th International Conference on Advanced Visual Interfaces (AVI 2024), June 3-7, 2024, Arenzano (Genoa), Italy
-  </a>
-</p>
-
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
+  i {
+    margin-right: 5px; /* Adds space between icon and text */
   }
 </style>
-
-  <p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753" target="_blank">Read the paper</a></p>
-    </div>
-
-    <!-- Publication 3 -->
-    <div class="pub">
-      <h3>First Multimodal Banquet: Exploring Innovative Technology for Commensality and Human-Food Interaction (CoFI2024)</h3>
-      <p><strong>Authors:</strong> Niewiadomski, R., Altarriba Bertran, F., Dawes, C., Obrist, M., Mancini, M.</p>
-     <p><strong>Conference:</strong> 
-  <a href="https://icmi.acm.org/2024/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    26th International Conference on Multimodal Interaction (ICMI 2024), November 4–8, 2024, San Jose, Costa Rica
-  </a>
-</p>
-
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
-  }
-</style>
-
-  <p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3678957.3685762" target="_blank">Read the paper</a></p>
-    </div>
-
-    <!-- Publication 2 -->
-    <div class="pub">
-      <h3>A Virtual Agent as a Commensal Companion</h3>
-      <p><strong>Authors:</strong> Mancini, M., Niewiadomski, R., De Lucia, G., Longobardi, F.M.</p>
-       <p><strong>Conference:</strong> 
-  <a href="https://iva.acm.org/2024/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    24th ACM International Conference on Intelligent Virtual Agents (IVA 2024), September 16–19, 2024, Glasgow, United Kingdom
-  </a>
-</p>
-
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
-  }
-</style>
-
-  <p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3652988.3673963" target="_blank">Read the paper</a> | <a href="images/poster_AVI.Conference_2024.pdf" target="_blank">View Poster (PDF)</a></p>
-    </div>
-
-    <!-- Publication 1 -->
-    <div class="pub">
-      <h3>How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity</h3>
-      <p><strong>Authors:</strong> Tiuleneva M., Castano E., Niewiadomski, R.</p>
-      <p><strong>Conference:</strong> ACII 2024, September 15–18, Glasgow, UK</p>
-       <p><strong>Conference:</strong> 
-  <a href="https://acii-conf.net/2024/" target="_blank" style="font-size: 0.9em; color: #888; text-decoration: none;">
-    12th International Conference on Affective Computing & Intelligent Interaction (ACII 2024), September 15–18, 2024, Glasgow, United Kingdom
-  </a>
-</p>
-
-<style>
-  a {
-    color: #888; /* Soft grayish-blue */
-    text-decoration: none; /* No underline, more subtle */
-  }
-
-  a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
-  }
-</style>
-
-  <p>
-      <p><a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656711" target="_blank">Read the paper</a></p>
-    </div>
-  </main>
+  
 
   <footer>
     <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank">
