--- a/results.html
+++ b/results.html
@@ -296,21 +296,25 @@
 </main>
 
   <style>
+  /* Default styling for links */
   a {
-    color: #888888; /* Soft grayish-blue */
+    color: #888; /* Soft grayish-blue for regular state */
+    font-size: 0.9em; /* Slightly smaller text */
     text-decoration: none; /* No underline, more subtle */
   }
 
+  /* Hover effect */
   a:hover {
-    color: #4da6ff; /* A subtle but noticeable hover color */
-    text-decoration: underline; /* Adds underline only on hover for emphasis */
+    color: #4da6ff; /* Lighter blue when hovering */
+    text-decoration: underline; /* Underline on hover */
   }
 
+  /* Icon styling (space between icon and text) */
   i {
-    margin-right: 5px; /* Adds space between icon and text */
+    margin-right: 5px; /* Adds space between the icon and the text */
   }
 </style>
-  
+
 
   <footer>
     <a href="https://commission.europa.eu/funding-tenders/find-funding/eu-funding-programmes_it" target="_blank">
