--- a/results.html
+++ b/results.html
@@ -298,7 +298,7 @@
   <style>
   /* Default styling for links */
   a {
-    color: #888; /* Soft grayish-blue for regular state */
+    color: #888 !important; /* Ensure soft gray color on all links */
     font-size: 0.9em; /* Slightly smaller text */
     text-decoration: none; /* No underline, more subtle */
   }
